# 134-Lab-Spring-2023

./: Poetry-n-Packages.md  README.md
Code/: StatsFittingCHi2.ipynb  StatsGaus.ipynb  helperfile.py  pyproject.toml
Code/Chaos/: Chaos.ipynb  ChaosCirc.ipynb  ChaosNb.ipynb  ChaosPanda.ipynb  ChoaAnalysis.ipynb  ErrorPropGraphs.ipynb  FinalRCLAnalysis.ipynb  Ignore.ipynb  MdFormulas.ipynb  MessingWithGrahs.ipynb  OldMD.ipynb  Pandas.ipynb  README.md  data.csv  data3.csv
Code/Millikan/: README.md
Code/Millikan/Millikan-Code/: Analysis.ipynb  Oil-Drop-OLDCODE.ipynb  Oil-DropV2.ipynb  e_40adjusted.txt  helpfunc.py
Code/Millikan/MillikanCode/: Formulas.md  Oil-DropV2.ipynb  helpfunc.py  test.py
Code/Millikan/Pandas/: Pd-subset-data.ipynb
Code/Stats/: StatsProfUnedit.ipynb
Code/Zeeman/: README.md  __init__.py
Code/Zeeman/Data/: 0_ZeroB.ipynb  180NoBRun1.txt  180NoBRun1Image.fits  180Run12.txt  180Run3.ipynb  180Run8.txt  180Run_1.ipynb  5_B0600.txt  90DegFiles.ipynb  90NoBRun1.txt  90Run1.ipynb  90Run11.txt  90Run12.txt  90Run3.ipynb  90Run5.txt  Attempt1.ipynb  Attempt2.ipynb  Attempt3.ipynb  Attempt4.ipynb  CenterofMass.ipynb  Error90.ipynb  ErrorPropCode.ipynb  LoopFilesInDir.ipynb  MarkdownError.md  Mu.ipynb  Mu1.txt  Mu2.txt  README.md  Run3Eerr90.txt  Run3Thetas90.txt  VarMu1.txt  VarMu2.txt  XYR1_180_Dic.txt  XYR1_90_Dic.txt  XYR2_180_Dic.txt  XYR2_90_Dic.txt  fits.ipynb  (+3 more)
Code/src/: helps.py
Millikan/: README.md  pyproject.toml
Millikan/Code/: Math.py  Pandas-info.md  Pandas.py  Pd-dataframe.py  Pd-subset-data.ipynb
Millikan/tests/: test_millikan.py
(+34 files in other folders)
