[tool.poetry]
name = "Millikan"
version = "0.1.0"
description = ""
authors = ["Drixitel <mpmunoz1993@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
python-math = "^0.0.1"
numpy = "^1.22.3"
pandas = "^1.4.1"
gspread = "^5.3.0"
python-dateutil = "^2.8.2"
pytz = "^2022.1"
matplotlib = "^3.5.1"
jupyterlab = "^3.3.2"
notebook = "^6.4.10"
openpyxl = "^3.0.9"
statistics = "^1.0.3"
scipy = "^1.8.0"
astropy = "^5.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
